tls-ingress/practice/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-pra
spec:
  tls:
  - hosts:
    - http-go.gasbugs.com
    - tomcat.gasbugs.com
    secretName: ingress-tls
  rules:
  - host: "tomcat.gasbugs.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: tomcat
            port:
              number: 80
  - host: "http-go.gasbugs.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: http-go
            port:
              number: 80
